# trader

./: .gitignore  CMakeLists.txt  generate_version.sh
src/: CMakeLists.txt  main.cpp
src/api/: BinanceApi.cpp  BinanceApi.h  CMakeLists.txt  IExchangeAPI.h  KrakenApi.cpp  KrakenApi.h
src/backtester/: BackTester.cpp  BackTester.h  CMakeLists.txt
src/core/: version.h
src/risk/: CMakeLists.txt  RiskManager.cpp  RiskManager.h
src/strategy/: CMakeLists.txt  IStrategy.h  MACDStrategy.cpp  MACDStrategy.h  RSIStrategy.cpp  RSIStrategy.h  SMAStrategy.cpp  SMAStrategy.h  StrategyEngine.cpp  StrategyEngine.h
src/utils/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  logger.cpp  logger.h
